samples/_failures_safe/1761331013_134fa8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43ff65ff.c: In function ‘graph_reset_visited’:
./samples/SAFE/__tmp_43ff65ff.c:190:5: error: expected identifier or ‘(’ at end of input
  190 |     for (int
      |     ^~~
./samples/SAFE/__tmp_43ff65ff.c:190:5: error: expected declaration or statement at end of input
